# interop

./: .travis.yml  2016-03-29-17-37-03.bag  CMakeLists.txt  Dockerfile  README.md  client.py  client.py~  client.sh  package.xml  setup.sh
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  _setup_util.py~  setup.sh
catkin_ws/devel/include/fcu_common/: Command.h  FW_Controller_Commands.h  FW_Current_Path.h  FW_State.h  FW_Waypoint.h  GPS.h  MR_Controller_Commands.h
catkin_ws/devel/lib/fcu_common/: fcu_common_gps  fcu_common_joy
catkin_ws/devel/lib/pkgconfig/: auvsi_client.pc  beginner_tutorials.pc  fcu_common.pc
catkin_ws/devel/lib/python2.7/dist-packages/fcu_common/msg/: _GPS.py  _MR_Controller_Commands.py  __init__.py
catkin_ws/devel/share/auvsi_client/cmake/: auvsi_clientConfig.cmake
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
catkin_ws/devel/share/common-lisp/ros/fcu_common/msg/: MR_Controller_Commands.lisp  _package.lisp  _package_MR_Controller_Commands.lisp  fcu_common-msg.asd
catkin_ws/devel/share/fcu_common/cmake/: fcu_common-msg-paths.cmake  fcu_commonConfig.cmake
catkin_ws/install/: .rosinstall  setup.sh
catkin_ws/src/auvsi_client/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/auvsi_client/scripts/: client.py
catkin_ws/src/beginner_tutorials/: package.xml~
catkin_ws/src/beginner_tutorials/scripts/: client.py
