<?xml version="1.0"?>
<package>
  <name>auvsi_client</name>
  <version>0.0.0</version>
  <description>The auvsi_client package</description>
  <maintainer email="jeffburgin@gmail.com">jeff</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>fcu_common</build_depend>
  <build_depend>sniper_cam</build_depend>
  <run_depend>sniper_cam</run_depend>
  <run_depend>fcu_common</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
